ASSERTION FAILED: event == [NSApp currentEvent] hitting Command-+ https://bugs.webkit.org/show_bug.cgi?id=130526 <rdar://problem/16371612>

Reviewed by Anders Carlsson.

* UIProcess/API/mac/WKView.mm: (-[WKView performKeyEquivalent:]): Cut custom
processing short whenever we are redispatching an event, not just when the event
we are handling is the one being redispatched. There shouldn't be any other unrelated
events here, just the one being redispatched and synthetic ones generated from it by AppKit.


Canonical link: https://commits.webkit.org/148543@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166000 268f45cc-cd09-0410-ab3c-d52691b4dbfc